# user_src

./: .gitignore  CITATION.cff  Makefile  Makefile.am  Makefile.in  README.md
.CNZ ORIGINAL/: APInof.hpp  CNZCell.cpp  CNZCell.hpp  CNZ_Constants.hpp  EnumSimulationCtrl.cpp  EnumSimulationCtrl.hpp  ExplicitSolver.hpp  GB_ICaL.hpp  HumanAtriaConstants.h  ISAC_Container.hpp  ReadICsToMap.hpp  RiceMyofilament.cpp  RiceMyofilament.hpp  RiceMyofilamentConstants.hpp  SRUnit.cpp  SingleCellParameter.cpp  SingleCellParameter.hpp  diffusiontensor.hpp  integrate_rk2.h  lsoda.hpp  lsoda_New.hpp  simulation_config.cpp  simulation_config.h  stimulus.cpp  stimulus.h  tools.hpp
.multiphysics_tests/: Makefile  Makefile.am  Makefile.in  anisotropic_solid_with_vector_storage_elements.h
anisotropic_constitutive/: Makefile  Makefile.am  Makefile.in  anisotropic_constitutive.h  anisotropic_constitutive_laws.cc  anisotropic_constitutive_laws.h
anisotropic_solid/: Makefile  Makefile.am  Makefile.in  anisotropic_solid.h  anisotropic_solid_elements.cc  anisotropic_solid_elements.h  anisotropic_solid_preconditioners.cc  anisotropic_solid_preconditioners.h  anisotropic_solid_traction_elements.h  anisotropic_solid_vector_expansion_elements.cc  anisotropic_solid_vector_expansion_elements.h  anisotropic_solid_with_vector_storage_elements.cc  anisotropic_solid_with_vector_storage_elements.h  refineable_anisotropic_solid_elements.cc  refineable_anisotropic_solid_elements.h
anisotropic_solid/.deps/: anisotropic_solid_elements.Plo  anisotropic_solid_preconditioners.Plo  anisotropic_solid_vector_expansion_elements.Plo  anisotropic_solid_with_vector_storage_elements.Plo  refineable_anisotropic_solid_elements.Plo
anisotropic_solid/.libs/: libanisotropic_solid.so.0
cardiac_multiphysics/: Makefile  Makefile.am  Makefile.in  anisotropic_solid_with_vector_and_monodomain_elements.cc  cardiac_multiphysics.h  cardiac_tissue_mono_elements.cc  cardiac_tissue_mono_elements.h  diffusion_coefficient_expansion_elements.h  electro_mechanical_fluid_multiphysics_elements.h  electro_mechanical_multiphysics_elements.h  monodomain_with_cell_elements.cc  monodomain_with_cell_elements.h  separated_cell_and_diffusion_mesh_elements.h
cell_interface/: Makefile  Makefile.am  Makefile.in  cell_interface.h  cell_interface_elements.cc  cell_interface_elements.h  segregated_cell_interface_elements.cc  segregated_cell_interface_elements.h
cell_membrane_potential/: Makefile  Makefile.am  Makefile.in  bidomain_elements.cc  bidomain_elements.h  bidomain_equations.h  bidomain_flux_elements.h  cell_membrane_potential.h  cell_membrane_potential_elements.cc  cell_membrane_potential_elements.h  monodomain_elements.cc  monodomain_elements.h  monodomain_elements_crank_nicolson.h  monodomain_elements_crank_nicolson_node_history.h  monodomain_elements_crank_nicolson_splitting_method.h  monodomain_elements_double_taylor_approximation.h  monodomain_elements_hermite_approximation.h  monodomain_elements_integral_splitting_method.h  monodomain_elements_obrechkoff_1_1.h  monodomain_elements_pade_2_point_1_1_approximant.h  monodomain_elements_simpsons_one_third_approximation.h  monodomain_elements_simpsons_three_eighths_approximation.h  monodomain_elements_strang_splitting.h  monodomain_elements_toms_splitting_method.h  monodomain_flux_elements.h  no_diffusion_elements.h  refineable_bidomain_elements.cc  refineable_bidomain_elements.h  refineable_monodomain_crank_nicolson_elements.h  refineable_monodomain_elements.cc  refineable_monodomain_elements.h
cell_model/: CNZ_Atria.cc  CNZ_Atria.h  Explicit_CNZ_Atria.cc  Explicit_CNZ_Atria.h  Explicit_CNZ_Atria_MarkovChain_IKs.cc  Explicit_CNZ_Atria_MarkovChain_IKs.h  Explicit_OHaraRudy_Vent.cc  Explicit_OHaraRudy_Vent.h  Explicit_OHaraRudy_Vent_MarkovChain_IKs.cc  Explicit_OHaraRudy_Vent_MarkovChain_IKs.h  Explicit_TNNP_Vent.cc  Explicit_TNNP_Vent.h  Explicit_TNNP_Vent_With_Rice.cc  Explicit_TNNP_Vent_With_Rice.h  Explicit_TNNP_Vent_With_Rice_MarkovChain_IKs.cc  Explicit_TNNP_Vent_With_Rice_MarkovChain_IKs.h  Implicit_CNZ_Atria.cc  Implicit_CNZ_Atria.h  Implicit_TNNP_Vent.cc  Implicit_TNNP_Vent.h  Makefile  Makefile.am  Makefile.in  TNNP_06_Vent.cc  TNNP_06_Vent.h  TNNP_Vent.cc  TNNP_Vent.h  TomekORudy.cc  TomekORudy.h  TomekORudy_Anti_KCNQ1.cc  TomekORudy_Anti_KCNQ1.h  TomekORudy_MarkovChain_IKs.cc  TomekORudy_MarkovChain_IKs.h  TomekORudy_new.cc  TomekORudy_new.h  cell_model.h  cell_model_base.cc  cell_model_base.h  cell_model_elements.cc  cell_model_elements.h  (+3 more)
cell_model/.deps/: cell_model_elements.Plo
cell_model/.libs/: libcell_model.so.0  libcell_model.so.0.0.0
cell_model_fully_segregated/: Makefile.am  cell_model_base_fully_segregated.h
cell_model_updated/: Makefile.am  Makefile.in  TNNP_06_MC_IKr.cc  TNNP_06_MC_IKr.h  TNNP_06_Updated.cc  TNNP_06_Updated.h  TomekORudy_Updated.cc  TomekORudy_Updated.h  cell_model_base_updated.h  validate_NSpecies_Lotka_Volterra.h  validate_cell.h
cell_models/: Makefile.am  cell_model_base.h
cell_solvers/: Makefile.am  cell_solvers_fully_partitioned.h  cell_solvers_fully_partitioned_safe.h  cell_solvers_fully_segregated.h  diff_augmented_cell_solvers.h  dummy.cc  empty_place_holder_cell.h
cell_solvers_fully_segregated/: Makefile.am  cell_solvers_fully_segregated_elements.h
cell_training/: Makefile  Makefile.am  Makefile.in  cell_training.h  meta_problem_class.cc  meta_problem_class.h  optimisation_elements.cc  optimisation_elements.h  sub_problem_class.h  trainable_cell_class.h  trainable_element.h  trainable_problem_class.h
component_multiphysics/: Makefile  Makefile.am  Makefile.in  anisotropic_solid_with_external_elements.h  component_multiphysics.h  monodomain_with_external_elements.cc  monodomain_with_external_elements.h  multi_domain_cardiac_tissue_sub_elements.cc  multi_domain_cardiac_tissue_sub_elements.h  projectable_multi_domain_cardiac_tissue_sub_elements.h  single_domain_cardiac_tissue_elements.h  (+3 more)
conducting_cell/: Makefile.am  conducting_cell_elements.cc  conducting_cell_elements.h  conducting_cell_elements_solves_for_vm.h
(+109 files in other folders)
