# A few file definitions
#-----------------------

# Define the sources
sources =  \
cell_state_container.cc \
Explicit_TNNP_Vent.cc \
Implicit_TNNP_Vent.cc \
Implicit_CNZ_Atria.cc \
Explicit_CNZ_Atria.cc \
Explicit_TNNP_Vent_With_Rice.cc \
Explicit_OHaraRudy_Vent.cc \
Explicit_CNZ_Atria_MarkovChain_IKs.cc \
Explicit_OHaraRudy_Vent_MarkovChain_IKs.cc \
Explicit_TNNP_Vent_With_Rice_MarkovChain_IKs.cc \
TomekORudy.cc \
TomekORudy_MarkovChain_IKs.cc \
TomekORudy_Anti_KCNQ1.cc \
TomekORudy_new.cc \
TNNP_06_Vent.cc


# Define the headers
headers =  \
cell_state_container.h \
cell_model_base.h \
Explicit_TNNP_Vent.h \
Implicit_TNNP_Vent.h \
Implicit_CNZ_Atria.h \
Explicit_CNZ_Atria.h \
Explicit_TNNP_Vent_With_Rice.h \
Explicit_OHaraRudy_Vent.h \
Explicit_CNZ_Atria_MarkovChain_IKs.h \
Explicit_OHaraRudy_Vent_MarkovChain_IKs.h \
Explicit_TNNP_Vent_With_Rice_MarkovChain_IKs.h \
TomekORudy.h \
TomekORudy_MarkovChain_IKs.h \
TomekORudy_Anti_KCNQ1.h \
TomekORudy_new.h \
TNNP_06_Vent.h

# Define name of library
libname = cell_model

# Combine headers and sources
headers_and_sources = $(headers) $(sources)

# Define the library that gets placed in lib directory
#-----------------------------------------------------
lib_LTLIBRARIES = libcell_model.la

# Sources that the library depends on: 
#-------------------------------------
libcell_model_la_SOURCES = $(headers_and_sources)

# The library's include headers:
#-------------------------------
# Headers that are to be included in the $(includedir) directory:
# This is the combined header which contains "#include<...>" commands
# for the real headers in the subdirectory below $(includedir)
include_HEADERS = $(libname).h 

#Here's the subdirectory where the actual header files are placed
library_includedir=$(includedir)/cell_model

#These are the header files that are to be placed in subdirectory
library_include_HEADERS=$(headers) 


# Required libraries -- [assuming that we want to link against stuff in generic
#-------------------     add other oomph-lib libraries if you need them....]
# Include path for library headers -- need to refer to include files
# in their respective source directories as they will not have been 
# installed yet! 
AM_CPPFLAGS += -I$(top_builddir)/src/generic -I$(top_builddir)/user_src/


# Combined header file
#---------------------
# Rule for building combined header (dummy target never gets made so
# the combined header is remade every time)
$(libname).h: dummy_$(libname).h

dummy_$(libname).h:  $(headers)
	echo  $(libname) $(headers) > all_$(libname).aux
	$(AWK) -f $(top_builddir)/bin/headers.awk < \
	       all_$(libname).aux > $(libname).h
	rm all_$(libname).aux


# Extra hook for install: Optionally replace headers by symbolic links
#---------------------------------------------------------------------
if SYMBOLIC_LINKS_FOR_HEADERS
install-data-hook: 
	(cd $(library_includedir) && rm -f $(headers) )
	(echo "$(headers)" > include_files.list )
	($(top_builddir)/bin/change_headers_to_links.sh `pwd`)
	($(LN_S) `cat include_files.list.aux` $(library_includedir) )
	(rm -r include_files.list.aux include_files.list ) 
else
install-data-hook: 
endif


# Tidy up
#--------
clean-local:
	rm -f $(libname).h


